# devopsAssignment

./: argocd-values.yaml  build.sh  grafana-values.yaml  install-argocd.sh  install-monitoring.sh  monitoring-values.yaml  prometheus-values.yaml  run-all.sh  setup-minikube.sh  test.sh
api-gateway/: Dockerfile  api_gateway.py  pyproject.toml
apigateway-chart/: Chart.yaml  values.yaml
apigateway-chart/templates/: NOTES.txt  deployment.yaml  httproute.yaml  service.yaml
argocd/: ocr-project.yaml
ocr-model/: Dockerfile  model.py
ocrmodel-chart/: Chart.yaml  values.yaml
ocrmodel-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
ocrmodel-chart/templates/tests/: test-connection.yaml
